--- a/a.html
+++ b/a.html
@@ -2,3 +2,8 @@
 <html lang="en-US"><head>
   <title>slinkyuser666</title>
   <meta charset="UTF-8">
+  <button type="Click for slink"
+  onclick="document.getElementById('demo').innerHTML = Date()">
+  Click me to display Date and Time.</button>
+  <p id="demo"></p>
+</html>
