--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en-US"><head>
   <title>slinkyuser666</title>
   <meta charset="UTF-8">
+  <link rel="icon" type="image/png" href="C:\Users\a\Downloads\slink.png"/>
   <button type="Click for slink"
   onclick="document.getElementById('demo').innerHTML = Date()">
-  Click me to display Date and Time.</button>
+  Slinked.</button>
   <p id="demo"></p>
 </html>
