--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US"><head>
-  <title>slinkyuser666</title>
+  <title>Slinky</title>
   <meta charset="UTF-8">
   <button type="Click for slink"
   onclick="document.getElementById('demo').innerHTML = Date()">
